--- a/src/style/hello.css
+++ b/src/style/hello.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
 html, body {
-  height: 100%;
   margin: 0;
   padding: 0;
 }
@@ -8,7 +7,7 @@ html, body {
 .container {
   height: 100vh;
   z-index: -1;
-  background-image: url(/image/main_board.webp);
+  background-image: url(../image/main_board.webp);
   background-repeat: no-repeat; /* Отменяем повторение фона */
   background-size: 100% auto;
   background-position: center bottom;
@@ -28,6 +27,7 @@ body {
   font-weight: bold;
   border: 1px solid white;
   border-radius: 10px;
+  margin: 0;
 }
 
 #welcome_text {
@@ -47,7 +47,7 @@ button {
 
 @font-face {
   font-family: "Cenotaph-Titling";
-  src: url(/fonts/Cenotaph-Titling.otf);
+  src: url(../fonts/Cenotaph-Titling.otf);
 }
 
 /*# sourceMappingURL=hello.css.map */
